--- a/index.html
+++ b/index.html
@@ -12,12 +12,5 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, repellat?
-    </p>
-  </body>
+  <body></body>
 </html>
