--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <input type="text" class="input" />
+  </body>
 </html>
