Build a input-group component.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,5 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <input type="text" class="input" />
-  </body>
+  <body></body>
 </html>
