Build a plans component

--- a/index.html
+++ b/index.html
@@ -12,16 +12,5 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <div style="padding: 4rem; width: 50%">
-      <div class="card card--secondary">
-        <header class="card__header">Title</header>
-        <div class="card__body">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus cum
-          dolor reprehenderit saepe nulla sed eveniet illum laborum adipisci
-          autem!
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
