--- a/index.html
+++ b/index.html
@@ -10,9 +10,429 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header>
+      <nav class="nav collapsible">
+        <a href="/"><img class="nav__brand" src="images/logo.svg" alt="" /></a>
+        <svg class="icon icon--white nav__toggler">
+          <use xlink:href="images/sprites.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+          <li class="nav__item"><a href="#">Hosting</a></li>
+          <li class="nav__item"><a href="#">VPS</a></li>
+          <li class="nav__item"><a href="#">Domain</a></li>
+          <li class="nav__item"><a href="#">Pricing</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header">
+          <h1 data-aos="fade-right" class="hero__heading">
+            Cloud Hosting for Pros
+          </h1>
+          <p class="hero__tagline">
+            Deploy your website in less than 60 seconds.
+          </p>
+          <a href="#" class="btn btn--accent btn--stretched">Get started</a>
+        </header>
+        <img
+          data-aos="fade-up"
+          class="hero__image"
+          src="images/banner.png"
+          alt=""
+        />
+      </div>
+    </section>
+
+    <section class="block container block-domain" data-aos="zoom-in-up">
+      <header class="block__header">
+        <h2>Starting at $10 per month</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
+          vel.
+        </p>
+      </header>
+
+      <div class="input-group">
+        <input
+          type="text"
+          class="input"
+          placeholder="Enter domain name here..."
+        />
+        <a href="#" class="btn btn--accent">
+          <svg class="icon icon--primary">
+            <use xlink:href="images/sprites.svg#search"></use></svg
+          >Search</a
+        >
+      </div>
+      <ul class="list block-domain__prices">
+        <li><span class="badge badge--secondary">.com $9</span></li>
+        <li>.sg $7</li>
+        <li>.space $12</li>
+        <li>.info $14</li>
+        <li>.net $16</li>
+        <li>.xyz $10</li>
+      </ul>
+    </section>
+
+    <section class="block container block-plans" data-aos="fade-up">
+      <div class="grid grid--1x3">
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge--small">10% OFF</span>
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="plan plan--popular">
+          <div class="card card--primary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--primary badge--small">10% OFF</span>
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge--small">10% OFF</span>
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="block container block-features">
+      <header class="block__header">
+        <h2>Host on the Cloud to Keep Growing</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt,
+          exercitationem!
+        </p>
+      </header>
+
+      <article class="grid grid--1x2 feature" data-aos="fade-right">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprites.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+            necessitatibus sint. Harum quibusdam ex sapiente nemo explicabo
+            eaque, expedita vel.
+          </p>
+          <a href="#" class="link-arrow">Learn more</a>
+        </div>
+        <img class="feature__image" src="images/easy.jpg" alt="" />
+      </article>
+
+      <article class="grid grid--1x2 feature" data-aos="fade-left">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprites.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply Fast Websites</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+            necessitatibus sint. Harum quibusdam ex sapiente nemo explicabo
+            eaque, expedita vel.
+          </p>
+          <a href="#" class="link-arrow">Learn more</a>
+        </div>
+        <img class="feature__image" src="images/fast.jpg" alt="" />
+      </article>
+
+      <article class="grid grid--1x2 feature" data-aos="fade-right">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprites.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Wordpress Made Easy</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+            necessitatibus sint. Harum quibusdam ex sapiente nemo explicabo
+            eaque, expedita vel.
+          </p>
+          <a href="#" class="link-arrow">Learn more</a>
+        </div>
+        <img class="feature__image" src="images/wordpress.jpg" alt="" />
+      </article>
+
+      <article class="grid grid--1x2 feature" data-aos="fade-left">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprites.svg#clock"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">24/7 Expert Support</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+            necessitatibus sint. Harum quibusdam ex sapiente nemo explicabo
+            eaque, expedita vel.
+          </p>
+          <a href="#" class="link-arrow">Learn more</a>
+        </div>
+        <img class="feature__image" src="images/support.jpg" alt="" />
+      </article>
+    </section>
+
+    <section class="block block--dark block--skewed-right block-showcase">
+      <header class="block__header">
+        <h2 class="block__heading">User-Friendly Control Panel</h2>
+      </header>
+      <div class="container grid grid--1x2">
+        <img
+          data-aos="fade-right"
+          class="block-showcase__image"
+          src="images/ipad.png"
+          alt=""
+        />
+
+        <ul class="list" data-aos="fade-up">
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprites.svg#snap"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Aspernatur voluptatem facere officia error eum rerum, ea
+                  veniam laborum.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li></li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprites.svg#growth"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Staging, Git & WP-CLI</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Aspernatur voluptatem facere officia error eum rerum, ea
+                  veniam laborum.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li></li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprites.svg#wordpress"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Dynamic Caching & More</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Aspernatur voluptatem facere officia error eum rerum, ea
+                  veniam laborum.
+                </p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="block container block-testimonials" data-aos="zoom-in-up">
+      <header class="block__header">
+        <h2>What our Customers are Saying</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores,
+          voluptatem!
+        </p>
+      </header>
+      <div class="card testimonial">
+        <div class="grid grid--1x2">
+          <div class="testimonial__image">
+            <img src="images/testimonial.jpg" alt="A happy, smiling customer" />
+            <span class="icon-container icon-container--accent">
+              <svg class="icon icon--white icon--small">
+                <use xlink:href="images/sprites.svg#quotes"></use>
+              </svg>
+            </span>
+          </div>
+          <blockquote class="quote">
+            <p class="quote__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+              debitis, numquam recusandae sit consectetur explicabo optio aut
+              esse dolores fugiat, architecto unde facere suscipit quibusdam.
+            </p>
+            <footer>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary quote__line">
+                    <use xlink:href="images/sprites.svg#line"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title quote__title">John Smith</h3>
+                  <p class="quote__company">ABC Company</p>
+                </div>
+              </div>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+    </section>
+
+    <div class="callout container callout--primary">
+      <div class="grid grid--1x2">
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sit
+            asperiores corrupti esse impedit quas atque blanditiis possimus
+            nesciunt omnis earum delectus tempore, sed fugiat iure deleniti
+            voluptatibus eligendi eaque.
+          </p>
+        </div>
+        <a href="#" class="btn btn--secondary btn--stretched">Get started</a>
+      </div>
+    </div>
+
+    <footer class="block footer">
+      <div class="container grid">
+        <section class="collapsible collapsible--expanded footer__section">
+          <div class="collapsible__header">
+            <h3 class="collapsible__heading footer__heading">Products</h3>
+            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
+          </div>
+          <div class="collapsible__content">
+            <ul class="list footer__list">
+              <li class="footer__item"><a href="#">Website Hosting</a></li>
+              <li class="footer__item">
+                <a href="#">Free Automated Wordpress</a>
+              </li>
+              <li class="footer__item"><a href="#">Migrations</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h3 class="collapsible__heading footer__heading">Company</h3>
+            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
+          </div>
+          <div class="collapsible__content">
+            <ul class="list footer__list">
+              <li class="footer__item"><a href="#">About</a></li>
+              <li class="footer__item">
+                <a href="#">Affiliates</a>
+              </li>
+              <li class="footer__item"><a href="#">Blog</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h3 class="collapsible__heading footer__heading">Support</h3>
+            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
+          </div>
+          <div class="collapsible__content">
+            <ul class="list footer__list">
+              <li class="footer__item"><a href="#">Contact</a></li>
+              <li class="footer__item">
+                <a href="#">Knowledge Base</a>
+              </li>
+              <li class="footer__item"><a href="#">FAQ</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h3 class="collapsible__heading footer__heading">Domains</h3>
+            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
+          </div>
+          <div class="collapsible__content">
+            <ul class="list footer__list">
+              <li class="footer__item"><a href="#">Domain Checker</a></li>
+              <li class="footer__item">
+                <a href="#">Domain Transfer</a>
+              </li>
+              <li class="footer__item"><a href="#">Free Domain</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <div class="footer__brand">
+          <img src="images/logo.svg" alt="" />
+          <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
+        </div>
+      </div>
+    </footer>
+
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
