--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="nav collapsible">
         <a href="/"><img class="nav__brand" src="images/logo.svg" alt="" /></a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="images/sprites.svg#menu"></use>
+          <use href="images/sprites.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -66,7 +66,7 @@
         />
         <a href="#" class="btn btn--accent">
           <svg class="icon icon--primary">
-            <use xlink:href="images/sprites.svg#search"></use></svg
+            <use href="images/sprites.svg#search"></use></svg
           >Search</a
         >
       </div>
@@ -160,7 +160,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprites.svg#easy"></use>
+              <use href="images/sprites.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -178,7 +178,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprites.svg#computer"></use>
+              <use href="images/sprites.svg#computer"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Simply Fast Websites</h3>
@@ -196,7 +196,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprites.svg#wordpress"></use>
+              <use href="images/sprites.svg#wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -214,7 +214,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprites.svg#clock"></use>
+              <use href="images/sprites.svg#clock"></use>
             </svg>
           </span>
           <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -246,7 +246,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprites.svg#snap"></use>
+                  <use href="images/sprites.svg#snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -264,7 +264,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprites.svg#growth"></use>
+                  <use href="images/sprites.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -282,7 +282,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprites.svg#wordpress"></use>
+                  <use href="images/sprites.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -313,7 +313,7 @@
             <img src="images/testimonial.jpg" alt="A happy, smiling customer" />
             <span class="icon-container icon-container--accent">
               <svg class="icon icon--white icon--small">
-                <use xlink:href="images/sprites.svg#quotes"></use>
+                <use href="images/sprites.svg#quotes"></use>
               </svg>
             </span>
           </div>
@@ -327,7 +327,7 @@
               <div class="media">
                 <div class="media__image">
                   <svg class="icon icon--primary quote__line">
-                    <use xlink:href="images/sprites.svg#line"></use>
+                    <use href="images/sprites.svg#line"></use>
                   </svg>
                 </div>
                 <div class="media__body">
