--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="/index.6771372a.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
       <nav class="collapsible nav">
-        <a href="/"
-          ><img class="nav__brand" src="/logo.4120a210.svg" alt=""
-        /></a>
+        <a href="/"><img class="nav__brand" src="images/logo.svg" alt="" /></a>
         <svg class="icon icon--white nav__toggler">
-          <use href="/sprites.b725d58c.svg" />
+          <use href="images/sprites.svg#menu" />
         </svg>
         <ul class="collapsible__content list nav__list">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -44,7 +42,7 @@
         <img
           data-aos="fade-up"
           class="hero__image"
-          src="/banner.d82dc4fd.png"
+          src="images/banner.png"
           alt=""
         />
       </div>
@@ -65,7 +63,7 @@
         />
         <a href="#" class="btn btn--accent">
           <svg class="icon icon--primary">
-            <use href="/sprites.b725d58c.svg" /></svg
+            <use href="images/sprites.svg#search" /></svg
           >Search</a
         >
       </div>
@@ -154,7 +152,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="/sprites.b725d58c.svg" />
+              <use href="/images/sprites.svg#easy" />
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -165,13 +163,14 @@
           </p>
           <a href="#" class="link-arrow">Learn more</a>
         </div>
-        <img class="feature__image" src="/easy.9eef3089.jpg" alt="" />
+        <img class="feature__image" src="images/easy.jpg" alt="" />
       </article>
+
       <article class="feature grid grid--1x2" data-aos="fade-left">
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="/sprites.b725d58c.svg" />
+              <use href="images/sprites.svg#computer" />
             </svg>
           </span>
           <h3 class="feature__heading">Simply Fast Websites</h3>
@@ -182,13 +181,14 @@
           </p>
           <a href="#" class="link-arrow">Learn more</a>
         </div>
-        <img class="feature__image" src="/fast.17e07bd6.jpg" alt="" />
+        <img class="feature__image" src="images/fast.jpg" alt="" />
       </article>
+
       <article class="feature grid grid--1x2" data-aos="fade-right">
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="/sprites.b725d58c.svg" />
+              <use href="images/sprites.svg#wordpress" />
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -199,13 +199,13 @@
           </p>
           <a href="#" class="link-arrow">Learn more</a>
         </div>
-        <img class="feature__image" src="/wordpress.c492f44c.jpg" alt="" />
+        <img class="feature__image" src="images/wordpress.jpg" alt="" />
       </article>
       <article class="feature grid grid--1x2" data-aos="fade-left">
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="/sprites.b725d58c.svg" />
+              <use href="images/sprites.svg#clock" />
             </svg>
           </span>
           <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -216,9 +216,10 @@
           </p>
           <a href="#" class="link-arrow">Learn more</a>
         </div>
-        <img class="feature__image" src="/support.473ccfd3.jpg" alt="" />
+        <img class="feature__image" src="images/support.jpg" alt="" />
       </article>
     </section>
+
     <section class="block block--dark block--skewed-right block-showcase">
       <header class="block__header">
         <h2 class="block__heading">User-Friendly Control Panel</h2>
@@ -227,7 +228,7 @@
         <img
           data-aos="fade-right"
           class="block-showcase__image"
-          src="/ipad.458f9284.png"
+          src="images/ipad.png"
           alt=""
         />
         <ul class="list" data-aos="fade-up">
@@ -235,7 +236,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="/sprites.b725d58c.svg" />
+                  <use href="images/sprites.svg#snap" />
                 </svg>
               </div>
               <div class="media__body">
@@ -253,7 +254,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="/sprites.b725d58c.svg" />
+                  <use href="images/sprites.svg#growth" />
                 </svg>
               </div>
               <div class="media__body">
@@ -271,7 +272,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="/sprites.b725d58c.svg" />
+                  <use href="images/sprites.svg#wordpress" />
                 </svg>
               </div>
               <div class="media__body">
@@ -287,6 +288,7 @@
         </ul>
       </div>
     </section>
+
     <section class="block block-testimonials container" data-aos="zoom-in-up">
       <header class="block__header">
         <h2>What our Customers are Saying</h2>
@@ -299,12 +301,12 @@
         <div class="grid grid--1x2">
           <div class="testimonial__image">
             <img
-              src="/testimonial.1d57bb46.jpg"
+              src="/images/testimonial.jpg"
               alt="A happy, smiling customer"
             />
             <span class="icon-container icon-container--accent">
               <svg class="icon icon--white icon--small">
-                <use href="/sprites.b725d58c.svg" />
+                <use href="images/sprites.svg#quotes" />
               </svg>
             </span>
           </div>
@@ -318,7 +320,7 @@
               <div class="media">
                 <div class="media__image">
                   <svg class="icon icon--primary quote__line">
-                    <use href="/sprites.b725d58c.svg" />
+                    <use href="images/sprites.svg#line" />
                   </svg>
                 </div>
                 <div class="media__body">
@@ -345,16 +347,13 @@
         <a href="#" class="btn btn--secondary btn--stretched">Get started</a>
       </div>
     </div>
+
     <footer class="block footer">
       <div class="container grid">
         <section class="collapsible collapsible--expanded footer__section">
           <div class="collapsible__header">
             <h3 class="collapsible__heading footer__heading">Products</h3>
-            <img
-              class="collapsible__toggler"
-              src="/chevron.00608704.svg"
-              alt=""
-            />
+            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
           </div>
           <div class="collapsible__content">
             <ul class="footer__list list">
@@ -369,11 +368,7 @@
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h3 class="collapsible__heading footer__heading">Company</h3>
-            <img
-              class="collapsible__toggler"
-              src="/chevron.00608704.svg"
-              alt=""
-            />
+            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
           </div>
           <div class="collapsible__content">
             <ul class="footer__list list">
@@ -386,11 +381,7 @@
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h3 class="collapsible__heading footer__heading">Support</h3>
-            <img
-              class="collapsible__toggler"
-              src="/chevron.00608704.svg"
-              alt=""
-            />
+            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
           </div>
           <div class="collapsible__content">
             <ul class="footer__list list">
@@ -403,11 +394,7 @@
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h3 class="collapsible__heading footer__heading">Domains</h3>
-            <img
-              class="collapsible__toggler"
-              src="/chevron.00608704.svg"
-              alt=""
-            />
+            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
           </div>
           <div class="collapsible__content">
             <ul class="footer__list list">
@@ -418,12 +405,12 @@
           </div>
         </section>
         <div class="footer__brand">
-          <img src="/logo.4120a210.svg" alt="" />
+          <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
         </div>
       </div>
     </footer>
-    <script src="/index.ea5969e1.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
