Add parcel for build.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/index.6771372a.css" />
   </head>
   <body>
     <header>
       <nav class="collapsible nav">
-        <a href="/"><img class="nav__brand" src="images/logo.svg" alt="" /></a>
+        <a href="/"
+          ><img class="nav__brand" src="/logo.4120a210.svg" alt=""
+        /></a>
         <svg class="icon icon--white nav__toggler">
-          <use href="images/sprites.svg#menu" />
+          <use href="/sprites.b725d58c.svg" />
         </svg>
         <ul class="collapsible__content list nav__list">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -42,7 +44,7 @@
         <img
           data-aos="fade-up"
           class="hero__image"
-          src="images/banner.png"
+          src="/banner.d82dc4fd.png"
           alt=""
         />
       </div>
@@ -63,7 +65,7 @@
         />
         <a href="#" class="btn btn--accent">
           <svg class="icon icon--primary">
-            <use href="images/sprites.svg#search" /></svg
+            <use href="/sprites.b725d58c.svg" /></svg
           >Search</a
         >
       </div>
@@ -152,7 +154,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="/images/sprites.svg#easy" />
+              <use href="/sprites.b725d58c.svg" />
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -163,14 +165,13 @@
           </p>
           <a href="#" class="link-arrow">Learn more</a>
         </div>
-        <img class="feature__image" src="images/easy.jpg" alt="" />
+        <img class="feature__image" src="/easy.9eef3089.jpg" alt="" />
       </article>
-
       <article class="feature grid grid--1x2" data-aos="fade-left">
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="images/sprites.svg#computer" />
+              <use href="/sprites.b725d58c.svg" />
             </svg>
           </span>
           <h3 class="feature__heading">Simply Fast Websites</h3>
@@ -181,14 +182,13 @@
           </p>
           <a href="#" class="link-arrow">Learn more</a>
         </div>
-        <img class="feature__image" src="images/fast.jpg" alt="" />
+        <img class="feature__image" src="/fast.17e07bd6.jpg" alt="" />
       </article>
-
       <article class="feature grid grid--1x2" data-aos="fade-right">
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="images/sprites.svg#wordpress" />
+              <use href="/sprites.b725d58c.svg" />
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -199,13 +199,13 @@
           </p>
           <a href="#" class="link-arrow">Learn more</a>
         </div>
-        <img class="feature__image" src="images/wordpress.jpg" alt="" />
+        <img class="feature__image" src="/wordpress.c492f44c.jpg" alt="" />
       </article>
       <article class="feature grid grid--1x2" data-aos="fade-left">
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use href="images/sprites.svg#clock" />
+              <use href="/sprites.b725d58c.svg" />
             </svg>
           </span>
           <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -216,10 +216,9 @@
           </p>
           <a href="#" class="link-arrow">Learn more</a>
         </div>
-        <img class="feature__image" src="images/support.jpg" alt="" />
+        <img class="feature__image" src="/support.473ccfd3.jpg" alt="" />
       </article>
     </section>
-
     <section class="block block--dark block--skewed-right block-showcase">
       <header class="block__header">
         <h2 class="block__heading">User-Friendly Control Panel</h2>
@@ -228,7 +227,7 @@
         <img
           data-aos="fade-right"
           class="block-showcase__image"
-          src="images/ipad.png"
+          src="/ipad.458f9284.png"
           alt=""
         />
         <ul class="list" data-aos="fade-up">
@@ -236,7 +235,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="images/sprites.svg#snap" />
+                  <use href="/sprites.b725d58c.svg" />
                 </svg>
               </div>
               <div class="media__body">
@@ -254,7 +253,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="images/sprites.svg#growth" />
+                  <use href="/sprites.b725d58c.svg" />
                 </svg>
               </div>
               <div class="media__body">
@@ -272,7 +271,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use href="images/sprites.svg#wordpress" />
+                  <use href="/sprites.b725d58c.svg" />
                 </svg>
               </div>
               <div class="media__body">
@@ -288,7 +287,6 @@
         </ul>
       </div>
     </section>
-
     <section class="block block-testimonials container" data-aos="zoom-in-up">
       <header class="block__header">
         <h2>What our Customers are Saying</h2>
@@ -301,12 +299,12 @@
         <div class="grid grid--1x2">
           <div class="testimonial__image">
             <img
-              src="/images/testimonial.jpg"
+              src="/testimonial.1d57bb46.jpg"
               alt="A happy, smiling customer"
             />
             <span class="icon-container icon-container--accent">
               <svg class="icon icon--white icon--small">
-                <use href="images/sprites.svg#quotes" />
+                <use href="/sprites.b725d58c.svg" />
               </svg>
             </span>
           </div>
@@ -320,7 +318,7 @@
               <div class="media">
                 <div class="media__image">
                   <svg class="icon icon--primary quote__line">
-                    <use href="images/sprites.svg#line" />
+                    <use href="/sprites.b725d58c.svg" />
                   </svg>
                 </div>
                 <div class="media__body">
@@ -347,13 +345,16 @@
         <a href="#" class="btn btn--secondary btn--stretched">Get started</a>
       </div>
     </div>
-
     <footer class="block footer">
       <div class="container grid">
         <section class="collapsible collapsible--expanded footer__section">
           <div class="collapsible__header">
             <h3 class="collapsible__heading footer__heading">Products</h3>
-            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
+            <img
+              class="collapsible__toggler"
+              src="/chevron.00608704.svg"
+              alt=""
+            />
           </div>
           <div class="collapsible__content">
             <ul class="footer__list list">
@@ -368,7 +369,11 @@
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h3 class="collapsible__heading footer__heading">Company</h3>
-            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
+            <img
+              class="collapsible__toggler"
+              src="/chevron.00608704.svg"
+              alt=""
+            />
           </div>
           <div class="collapsible__content">
             <ul class="footer__list list">
@@ -381,7 +386,11 @@
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h3 class="collapsible__heading footer__heading">Support</h3>
-            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
+            <img
+              class="collapsible__toggler"
+              src="/chevron.00608704.svg"
+              alt=""
+            />
           </div>
           <div class="collapsible__content">
             <ul class="footer__list list">
@@ -394,7 +403,11 @@
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h3 class="collapsible__heading footer__heading">Domains</h3>
-            <img class="collapsible__toggler" src="images/chevron.svg" alt="" />
+            <img
+              class="collapsible__toggler"
+              src="/chevron.00608704.svg"
+              alt=""
+            />
           </div>
           <div class="collapsible__content">
             <ul class="footer__list list">
@@ -405,12 +418,12 @@
           </div>
         </section>
         <div class="footer__brand">
-          <img src="images/logo.svg" alt="" />
+          <img src="/logo.4120a210.svg" alt="" />
           <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
         </div>
       </div>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="/index.ea5969e1.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
